--- a/StockWebApp/app_home/templates/app_home/index.html
+++ b/StockWebApp/app_home/templates/app_home/index.html
@@ -22,6 +22,15 @@ Hello
                     <td>
                         {{ instance.fields.product_name}}
                     </td>
+                    <td>
+                        {{ instance.fields.unit_id}}
+                    </td>
+                    <td>
+                        {{ instance.fields.amount}}
+                    </td>
+                    <td>
+                        {{ instance.fields.status_id}}
+                    </td>
                 </tr>
             {% endfor %}
 
