--- a/StockWebApp/app_home/templates/app_home/index.html
+++ b/StockWebApp/app_home/templates/app_home/index.html
@@ -10,6 +10,15 @@ Hello
                     <th>
                         product_name
                     </th>
+                    <th>
+                        unit_id
+                    </th>
+                    <th>
+                        amount
+                    </th>
+                    <th>
+                        status_id
+                    </th>                    
                 </tr>
             </thead>
 
