--- a/StockWebApp/app_home/templates/app_home/index.html
+++ b/StockWebApp/app_home/templates/app_home/index.html
@@ -1,6 +1,15 @@
-Hello
+
 <html>
+    <head>
+        <style>
+            table, th, td {
+                border: 1px solid black;
+                border-collapse: collapse;
+                }
+        </style>
+    </head>
     <body>
+        <h1>Table of stock</h1>
         <table>
             <thead>
                 <tr>
@@ -9,6 +18,15 @@ Hello
                     </th>
                     <th>
                         product_name
+                    </th>
+                    <th>
+                        unit_id
+                    </th>
+                    <th>
+                        amount
+                    </th>
+                    <th>
+                        status_id
                     </th>
                 </tr>
             </thead>
