--- a/StockWebApp/app_home/templates/app_home/search.html
+++ b/StockWebApp/app_home/templates/app_home/search.html
@@ -11,32 +11,14 @@
         
         <h1>Table of stock</h1>
         <form action="#" method="post">{% csrf_token %}
-            <div class="form-group first">
-                <input type="text" placeholder="Enter product id:"
-                    name="product_id">
-            </div>
+            
+            <input type="submit" name="insert" value="insert">
 
-            <div class="form-group 2">
-                <input type="text" placeholder="Enter product name:"
-                    name="product_name">
+            <div class="form-group 6">
+                <input type="number" placeholder="Enter products id (search):"
+                    name="product_id_search">
             </div>
-
-            <div class="form-group 3">
-                <input type="number" placeholder="Enter unit id:"
-                    name="unit_id">
-            </div>
-
-            <div class="form-group 4">
-                <input type="number" placeholder="Enter amount:"
-                    name="amount">
-            </div>
-
-            <div class="form-group 5">
-                <input type="number" placeholder="Enter status id:"
-                    name="status_id">
-            </div>
-            <input type="submit" name="insert" value="submit">
-            <input type="submit" name="search" value="go to search">
+            <input type="submit" name="search" value="submit">
         </form>
         <table>
             <thead>
