--- a/StockWebApp/app_home/templates/app_home/search.html
+++ b/StockWebApp/app_home/templates/app_home/search.html
@@ -12,13 +12,13 @@
         <h1>Table of stock</h1>
         <form action="#" method="post">{% csrf_token %}
             
-            <input type="submit" name="insert" value="insert">
+            <input type="submit" name="insert" value="Back to Insert">
 
             <div class="form-group 6">
-                <input type="number" placeholder="Enter products id (search):"
+                <input type="text" placeholder="Enter products id (search):"
                     name="product_id_search">
             </div>
-            <input type="submit" name="search" value="submit">
+            <input type="submit" name="search" value="Search">
         </form>
         <table>
             <thead>
