--- a/StockWebApp/app_home/templates/app_home/index.html
+++ b/StockWebApp/app_home/templates/app_home/index.html
@@ -22,8 +22,8 @@
             </div>
 
             <div class="form-group 3">
-                <input type="number" placeholder="Enter unit id:"
-                    name="unit_id">
+                <input type="text" placeholder="Enter unit name:"
+                    name="unit_name">
             </div>
 
             <div class="form-group 4">
@@ -62,20 +62,20 @@
             {% for instance in data %}
                 <tr>
                     <td>
-                        {{ instance.fields.product_id}}
+                        {{ instance.product_id}}
                     </td>
 
                     <td>
-                        {{ instance.fields.product_name}}
+                        {{ instance.product_name}}
                     </td>
                     <td>
-                        {{ instance.fields.unit_id}}
+                        {{ instance.unit.unit_name}}
                     </td>
                     <td>
-                        {{ instance.fields.amount}}
+                        {{ instance.amount}}
                     </td>
                     <td>
-                        {{ instance.fields.status_id}}
+                        {{ instance.status_id}}
                     </td>
                 </tr>
             {% endfor %}
