--- a/StockWebApp/app_home/templates/app_home/search.html
+++ b/StockWebApp/app_home/templates/app_home/search.html
@@ -23,21 +23,12 @@
         <table>
             <thead>
                 <tr>
-                    <th>
-                        product_id
-                    </th>
-                    <th>
-                        product_name
-                    </th>
-                    <th>
-                        unit_id
-                    </th>
-                    <th>
-                        amount
-                    </th>
-                    <th>
-                        status_id
-
+                    <th>product_id</th>
+                    <th>product_name</th>
+                    <th>unit_id</th>
+                    <th>amount</th>
+                    <th>status_id</th>
+                    <th>Delete</th>
                 </tr>
             </thead>
 
@@ -58,6 +49,11 @@
                     </td>
                     <td>
                         {{ instance.fields.status_id}}
+                    </td>
+                    <td class = "text_center">
+                        <div class = "btn_group">
+                            <a href="/delete/{{instance.fields.product_id}}">Delete</a>
+                        </div>
                     </td>
                 </tr>
             {% endfor %}
