--- a/StockWebApp/app_home/templates/app_home/search.html
+++ b/StockWebApp/app_home/templates/app_home/search.html
@@ -53,7 +53,7 @@
                     </td>
                     <td class = "text_center">
                         <div class = "btn_group">
-                            <a href="/delete/{{instance.fields.product_id}}">Delete</a>
+                            <a href="/delete/{{instance.product_id}}">Delete</a>
                         </div>
                     </td>
                 </tr>
