--- a/StockWebApp/app_home/templates/app_home/index.html
+++ b/StockWebApp/app_home/templates/app_home/index.html
@@ -1,3 +1,4 @@
+{% load static %}
 <html>
     <head>
         <style>
@@ -8,8 +9,9 @@
         </style>
     </head>
     <body>
-        
-        <h1>Table of stock</h1>
+        <center>
+        <img src="{% static 'nulogo.png' %}" width="150" height="150">
+        <h1>Table of all stock</h1>
         <form action="#" method="post">{% csrf_token %}
             <div class="form-group first">
                 <input type="text" placeholder="Enter product id:"
@@ -37,6 +39,7 @@
             </div>
             <input type="submit" name="insert" value="submit">
             <input type="submit" name="search" value="go to search">
+            <input type="submit" name="update" value="go to update">
         </form>
         <table>
             <thead>
@@ -81,6 +84,6 @@
             {% endfor %}
 
         </table>
-
+    </center>
     </body>
 </html>
