--- a/StockWebApp/app_home/templates/app_home/search.html
+++ b/StockWebApp/app_home/templates/app_home/search.html
@@ -1,4 +1,4 @@
-
+{% load static %}
 <html>
     <head>
         <style>
@@ -9,7 +9,8 @@
         </style>
     </head>
     <body>
-        
+        <center>
+        <img src="{% static 'nulogo.png' %}" width="150" height="150">
         <h1>Table of stock</h1>
         <form action="#" method="post">{% csrf_token %}
             
@@ -60,7 +61,7 @@
             {% endfor %}
 
         </table>
-
+    </center>
     </body>
 </html>
 
