--- a/StockWebApp/app_home/templates/app_home/index.html
+++ b/StockWebApp/app_home/templates/app_home/index.html
@@ -1,44 +1,56 @@
 {% load static %}
 <html>
-    <head>
-        <style>
-            table, th, td {
-                border: 1px solid black;
-                border-collapse: collapse;
-                }
-        </style>
-    </head>
-    <body>
-        <center>
+
+<head>
+    <style>
+        table,
+        th,
+        td {
+            border: 1px solid black;
+            border-collapse: collapse;
+        }
+
+        th,
+        td {
+            text-align: center;
+            padding: 8px;
+        }
+
+        tr:nth-child(even) {
+            background-color: #D6EEEE;
+        }
+    </style>
+</head>
+
+<body style="background-color:silver;">
+    <center>
         <img src="{% static 'nulogo.png' %}" width="150" height="150">
         <h1>Table of stock</h1>
         <form action="#" method="post">{% csrf_token %}
             <div class="form-group first">
-                <input type="text" placeholder="Enter product id:"
-                    name="product_id">
+                <input autocomplete="off" type="text" placeholder="Enter product id" name="product_id">
             </div>
 
             <div class="form-group 2">
-                <input type="text" placeholder="Enter product name:"
-                    name="product_name">
+                <input autocomplete="off" type="text" placeholder="Enter product name" name="product_name">
             </div>
 
             <div class="form-group 3">
-                <input type="text" placeholder="Enter unit name:"
-                    name="unit_name">
+                <input autocomplete="off" type="text" placeholder="Enter unit name" name="unit_name">
             </div>
 
             <div class="form-group 4">
-                <input type="number" placeholder="Enter amount:"
-                    name="amount">
+                <input autocomplete="off" type="number" placeholder="Enter amount" name="amount">
             </div>
 
             <div class="form-group 5">
-                <input type="number" placeholder="Enter status id:"
-                    name="status_id">
+                <input autocomplete="off" type="number" placeholder="Enter status id" name="status_id">
             </div>
             <input type="submit" name="insert" value="submit">
-            <input type="submit" name="search" value="go to search">
+            <button type="button">
+                <a href="{% url 'search'%}">Go to search </a>
+            </button>
+            <!-- <input type="submit" name="search" value="go to search"> -->
         </form>
         <table>
             <thead>
@@ -55,38 +67,43 @@
             </thead>
 
             {% for instance in data %}
-                <tr>
-                    <td>
-                        {{ instance.product_id}}
-                    </td>
+            <tr>
+                <td>
+                    {{ instance.product_id}}
+                </td>
 
-                    <td>
-                        {{ instance.product_name}}
-                    </td>
-                    <td>
-                        {{ instance.unit.unit_name}}
-                    </td>
-                    <td>
-                        {{ instance.amount}}
-                    </td>
-                    <td>
-                        {{ instance.status_id}}
-                    </td>
-                    <td class = "text_center">
-                        <div class = "btn_group">
-                            <a href = "" > Edit </a>
-                        </div>
-                    </td>
-                    <td class = "text_center">
-                        <div class = "btn_group">
-                            <a href="/delete/{{instance.product_id}}">Delete</a>
-                        </div>
-                    </td>
-                </tr>
-        
+                <td style="text-align:left;">
+                    {{ instance.product_name}}
+                </td>
+                <td>
+                    {{ instance.unit.unit_name}}
+                </td>
+                <td>
+                    {{ instance.amount}}
+                </td>
+                <td>
+                    {% if instance.status_id == 1 %}
+                        พร้อมใช้งาน
+                    {% else %}
+                        <font color="red">ไม่พร้อมใช้งาน</font>
+                    {% endif %}
+                </td>
+                <td class="text_center">
+                    <div class="btn_group">
+                        <a href=""> Edit </a>
+                    </div>
+                </td>
+                <td class="text_center">
+                    <div class="btn_group">
+                        <a href="/delete/{{instance.product_id}}">Delete</a>
+                    </div>
+                </td>
+            </tr>
+
             {% endfor %}
 
         </table>
     </center>
-    </body>
+</body>
+
 </html>
