--- a/StockWebApp/app_home/templates/app_home/search.html
+++ b/StockWebApp/app_home/templates/app_home/search.html
@@ -6,15 +6,24 @@
                 border: 1px solid black;
                 border-collapse: collapse;
                 }
+                th,
+        td {
+            text-align: left;
+            padding: 8px;
+        }
+
+        tr:nth-child(even) {
+            background-color: #D6EEEE;
+        }
         </style>
     </head>
-    <body>
+    <body style="background-color:silver;">
         <center>
         <img src="{% static 'nulogo.png' %}" width="150" height="150">
         <h1>Table of stock</h1>
         <form action="#" method="post">{% csrf_token %}
             
-            <input type="submit" name="insert" value="Back to Insert">
+            <input autocomplete="off" type="submit" name="insert" value="Back to Insert">
 
             <div class="form-group 6">
                 <input type="text" placeholder="Enter products id (search):"
