--- a/StockWebApp/app_home/templates/app_home/index.html
+++ b/StockWebApp/app_home/templates/app_home/index.html
@@ -100,7 +100,7 @@
                 </td>
                 <td class="text_center">
                     <div class="btn_group">
-                        <a href="/delete/{{instance.product_id}}">Delete</a>
+                        <a href="/delete/{{instance.product_id}}" onclick="return confirm('Are you sure to delete?')">Delete</a>
                     </div>
                 </td>
             </tr>
