--- a/StockWebApp/app_home/templates/app_home/index.html
+++ b/StockWebApp/app_home/templates/app_home/index.html
@@ -94,7 +94,7 @@
                 </td>
                 <td class="text_center">
                     <div class="btn_group">
-                        <a href=""> Edit </a>
+                        <a href = "{% url 'update' instance.product_id%}" > Edit </a>
                     </div>
                 </td>
                 <td class="text_center">
