--- a/StockWebApp/app_home/templates/app_home/index.html
+++ b/StockWebApp/app_home/templates/app_home/index.html
@@ -167,9 +167,7 @@
                 </td>
                 <td class="text_center">
                     <div class="btn_group">
-                        <a href="">
-                            <font color="black">แก้ไข</font>
-                        </a>
+                        <a href = "{% url 'update' instance.product_id%}" > แก้ไข </a>
                     </div>
                 </td>
                 <td class="text_center">
